demo and logic of the icon

--- a/demo/index.html
+++ b/demo/index.html
@@ -22,7 +22,15 @@
       <h3>Basic game-icon demo</h3>
       <demo-snippet>
         <template>
-          <game-icon></game-icon>
+          <game-icon debug author="heavenly-dog" path="defensive-wall"></game-icon>
+          <game-icon debug author="heavenly-dog" path="catapult"></game-icon>
+          <game-icon author="heavenly-dog" path="catapult" width="75" height="75"></game-icon>
+          <game-icon author="heavenly-dog" path="catapult" width="150" height="150"></game-icon>
+          <game-icon author="heavenly-dog" path="catapult" width="300" height="300"></game-icon>
+          <game-icon debug path="https://upload.wikimedia.org/wikipedia/en/4/4a/Commons-logo.svg"></game-icon>
+
+          <game-icon debug author="andymeneely" path="police-badge"></game-icon>
+          
         </template>
       </demo-snippet>
     </div>
