demo and re-arranged folder structure of aussiesim icons

--- a/demo/index.html
+++ b/demo/index.html
@@ -26,11 +26,34 @@
           <game-icon debug author="heavenly-dog" path="catapult"></game-icon>
           <game-icon author="heavenly-dog" path="catapult" width="75" height="75"></game-icon>
           <game-icon author="heavenly-dog" path="catapult" width="150" height="150"></game-icon>
-          <game-icon author="heavenly-dog" path="catapult" width="300" height="300"></game-icon>
           <game-icon debug path="https://upload.wikimedia.org/wikipedia/en/4/4a/Commons-logo.svg"></game-icon>
 
           <game-icon debug author="andymeneely" path="police-badge"></game-icon>
-          
+
+          <game-icon debug author="aussiesim" path="card-ace-clubs"></game-icon>
+          <game-icon debug author="aussiesim" path="card-ace-diamonds"></game-icon>
+          <game-icon debug author="aussiesim" path="card-ace-hearts"></game-icon>
+          <game-icon debug author="aussiesim" path="card-ace-spades"></game-icon>
+
+          <game-icon debug author="aussiesim" path="card-2-clubs"></game-icon>
+          <game-icon debug author="aussiesim" path="card-2-diamonds"></game-icon>
+          <game-icon debug author="aussiesim" path="card-2-hearts"></game-icon>
+          <game-icon debug author="aussiesim" path="card-2-spades"></game-icon>
+
+          <game-icon debug author="aussiesim" path="card-jack-clubs"></game-icon>
+          <game-icon debug author="aussiesim" path="card-jack-diamonds"></game-icon>
+          <game-icon debug author="aussiesim" path="card-jack-hearts"></game-icon>
+          <game-icon debug author="aussiesim" path="card-jack-spades"></game-icon>
+
+          <game-icon debug author="aussiesim" path="card-king-clubs"></game-icon>
+          <game-icon debug author="aussiesim" path="card-king-diamonds"></game-icon>
+          <game-icon debug author="aussiesim" path="card-king-hearts"></game-icon>
+          <game-icon debug author="aussiesim" path="card-king-spades"></game-icon>
+
+          <game-icon debug author="aussiesim" path="card-queen-clubs"></game-icon>
+          <game-icon debug author="aussiesim" path="card-queen-diamonds"></game-icon>
+          <game-icon debug author="aussiesim" path="card-queen-hearts"></game-icon>
+          <game-icon debug author="aussiesim" path="card-queen-spades"></game-icon>
         </template>
       </demo-snippet>
     </div>
