demo of several icons and style that floats by default unless it is for a debug display

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,11 @@
 
     <custom-style>
       <style is="custom-style" include="demo-pages-shared-styles">
+        .icons-container::after {
+          content: ' ';
+          display: block;
+          clear: both;
+        }
       </style>
     </custom-style>
   </head>
@@ -30,30 +35,72 @@
 
           <game-icon debug author="andymeneely" path="police-badge"></game-icon>
 
-          <game-icon debug author="aussiesim" path="card-ace-clubs"></game-icon>
-          <game-icon debug author="aussiesim" path="card-ace-diamonds"></game-icon>
-          <game-icon debug author="aussiesim" path="card-ace-hearts"></game-icon>
-          <game-icon debug author="aussiesim" path="card-ace-spades"></game-icon>
+          <div class="icons-container">
+            <game-icon author="aussiesim" path="card-ace-clubs"></game-icon>
+            <game-icon author="aussiesim" path="card-ace-diamonds"></game-icon>
+            <game-icon author="aussiesim" path="card-ace-hearts"></game-icon>
+            <game-icon author="aussiesim" path="card-ace-spades"></game-icon>
 
-          <game-icon debug author="aussiesim" path="card-2-clubs"></game-icon>
-          <game-icon debug author="aussiesim" path="card-2-diamonds"></game-icon>
-          <game-icon debug author="aussiesim" path="card-2-hearts"></game-icon>
-          <game-icon debug author="aussiesim" path="card-2-spades"></game-icon>
+            <game-icon author="aussiesim" path="card-2-clubs"></game-icon>
+            <game-icon author="aussiesim" path="card-2-diamonds"></game-icon>
+            <game-icon author="aussiesim" path="card-2-hearts"></game-icon>
+            <game-icon author="aussiesim" path="card-2-spades"></game-icon>
 
-          <game-icon debug author="aussiesim" path="card-jack-clubs"></game-icon>
-          <game-icon debug author="aussiesim" path="card-jack-diamonds"></game-icon>
-          <game-icon debug author="aussiesim" path="card-jack-hearts"></game-icon>
-          <game-icon debug author="aussiesim" path="card-jack-spades"></game-icon>
+            <game-icon author="aussiesim" path="card-3-clubs"></game-icon>
+            <game-icon author="aussiesim" path="card-3-diamonds"></game-icon>
+            <game-icon author="aussiesim" path="card-3-hearts"></game-icon>
+            <game-icon author="aussiesim" path="card-3-spades"></game-icon>
 
-          <game-icon debug author="aussiesim" path="card-king-clubs"></game-icon>
-          <game-icon debug author="aussiesim" path="card-king-diamonds"></game-icon>
-          <game-icon debug author="aussiesim" path="card-king-hearts"></game-icon>
-          <game-icon debug author="aussiesim" path="card-king-spades"></game-icon>
+            <game-icon author="aussiesim" path="card-4-clubs"></game-icon>
+            <game-icon author="aussiesim" path="card-4-diamonds"></game-icon>
+            <game-icon author="aussiesim" path="card-4-hearts"></game-icon>
+            <game-icon author="aussiesim" path="card-4-spades"></game-icon>
 
-          <game-icon debug author="aussiesim" path="card-queen-clubs"></game-icon>
-          <game-icon debug author="aussiesim" path="card-queen-diamonds"></game-icon>
-          <game-icon debug author="aussiesim" path="card-queen-hearts"></game-icon>
-          <game-icon debug author="aussiesim" path="card-queen-spades"></game-icon>
+            <game-icon author="aussiesim" path="card-5-clubs"></game-icon>
+            <game-icon author="aussiesim" path="card-5-diamonds"></game-icon>
+            <game-icon author="aussiesim" path="card-5-hearts"></game-icon>
+            <game-icon author="aussiesim" path="card-5-spades"></game-icon>
+
+            <game-icon author="aussiesim" path="card-6-clubs"></game-icon>
+            <game-icon author="aussiesim" path="card-6-diamonds"></game-icon>
+            <game-icon author="aussiesim" path="card-6-hearts"></game-icon>
+            <game-icon author="aussiesim" path="card-6-spades"></game-icon>
+
+            <game-icon author="aussiesim" path="card-7-clubs"></game-icon>
+            <game-icon author="aussiesim" path="card-7-diamonds"></game-icon>
+            <game-icon author="aussiesim" path="card-7-hearts"></game-icon>
+            <game-icon author="aussiesim" path="card-7-spades"></game-icon>
+
+            <game-icon author="aussiesim" path="card-8-clubs"></game-icon>
+            <game-icon author="aussiesim" path="card-8-diamonds"></game-icon>
+            <game-icon author="aussiesim" path="card-8-hearts"></game-icon>
+            <game-icon author="aussiesim" path="card-8-spades"></game-icon>
+
+            <game-icon author="aussiesim" path="card-9-clubs"></game-icon>
+            <game-icon author="aussiesim" path="card-9-diamonds"></game-icon>
+            <game-icon author="aussiesim" path="card-9-hearts"></game-icon>
+            <game-icon author="aussiesim" path="card-9-spades"></game-icon>
+
+            <game-icon author="aussiesim" path="card-10-clubs"></game-icon>
+            <game-icon author="aussiesim" path="card-10-diamonds"></game-icon>
+            <game-icon author="aussiesim" path="card-10-hearts"></game-icon>
+            <game-icon author="aussiesim" path="card-10-spades"></game-icon>
+
+            <game-icon author="aussiesim" path="card-jack-clubs"></game-icon>
+            <game-icon author="aussiesim" path="card-jack-diamonds"></game-icon>
+            <game-icon author="aussiesim" path="card-jack-hearts"></game-icon>
+            <game-icon author="aussiesim" path="card-jack-spades"></game-icon>
+
+            <game-icon author="aussiesim" path="card-king-clubs"></game-icon>
+            <game-icon author="aussiesim" path="card-king-diamonds"></game-icon>
+            <game-icon author="aussiesim" path="card-king-hearts"></game-icon>
+            <game-icon author="aussiesim" path="card-king-spades"></game-icon>
+
+            <game-icon author="aussiesim" path="card-queen-clubs"></game-icon>
+            <game-icon author="aussiesim" path="card-queen-diamonds"></game-icon>
+            <game-icon author="aussiesim" path="card-queen-hearts"></game-icon>
+            <game-icon author="aussiesim" path="card-queen-spades"></game-icon>
+          </div>
         </template>
       </demo-snippet>
     </div>
