--- a/game-icon.html
+++ b/game-icon.html
@@ -6,6 +6,7 @@
     <style>
       :host {
         display: block;
+        float: left;
       }
 
       h1 {
@@ -29,6 +30,10 @@
       <h1>[[path]]</h1>
 
       <style>
+        :host {
+          float: none;
+        }
+
         .copyright {
           display: block;
         }
