--- a/game-icon.html
+++ b/game-icon.html
@@ -101,7 +101,7 @@
       ready() {
         super.ready();
 
-        const base = window.location.href.indexOf('/components/game-icon/demo') ?
+        const base = (window.location.href.indexOf('/components/game-icon/demo') !== -1) ?
           '../'
           : `${window.location.href}bower_components/game-icon/`;
 
