added Carl Olsen icons

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,6 +19,10 @@
           display: block;
           clear: both;
         }
+
+        .icons-container game-icon {
+          height: 50px;
+        }
       </style>
     </custom-style>
   </head>
@@ -100,6 +104,13 @@
             <game-icon author="aussiesim" path="card-queen-diamonds"></game-icon>
             <game-icon author="aussiesim" path="card-queen-hearts"></game-icon>
             <game-icon author="aussiesim" path="card-queen-spades"></game-icon>
+
+            <game-icon author="carl-olsen" path="brutal-helm"></game-icon>
+            <game-icon author="carl-olsen" path="crossbow"></game-icon>
+            <game-icon author="carl-olsen" path="flame"></game-icon>
+            <game-icon author="carl-olsen" path="mite-alt"></game-icon>
+            <game-icon author="carl-olsen" path="spider-alt"></game-icon>
+            <game-icon author="carl-olsen" path="spider-face"></game-icon>
           </div>
         </template>
       </demo-snippet>
