--- a/game-icon.html
+++ b/game-icon.html
@@ -120,6 +120,10 @@
             this.website = 'http://www.se.rit.edu/~andy/';
             this.authorFullName = 'Andy Meneely';
             break;
+          case 'carl-olsen':
+            this.website = 'https://twitter.com/unstoppableCarl';
+            this.authorFullName = 'Carl Olsen';
+            break;
           default:
             this.website = null;
         }
