--- a/demo/index.html
+++ b/demo/index.html
@@ -44,62 +44,50 @@
             <game-icon author="aussiesim" path="card-ace-diamonds"></game-icon>
             <game-icon author="aussiesim" path="card-ace-hearts"></game-icon>
             <game-icon author="aussiesim" path="card-ace-spades"></game-icon>
-
             <game-icon author="aussiesim" path="card-2-clubs"></game-icon>
             <game-icon author="aussiesim" path="card-2-diamonds"></game-icon>
             <game-icon author="aussiesim" path="card-2-hearts"></game-icon>
             <game-icon author="aussiesim" path="card-2-spades"></game-icon>
-
             <game-icon author="aussiesim" path="card-3-clubs"></game-icon>
             <game-icon author="aussiesim" path="card-3-diamonds"></game-icon>
             <game-icon author="aussiesim" path="card-3-hearts"></game-icon>
             <game-icon author="aussiesim" path="card-3-spades"></game-icon>
-
             <game-icon author="aussiesim" path="card-4-clubs"></game-icon>
             <game-icon author="aussiesim" path="card-4-diamonds"></game-icon>
             <game-icon author="aussiesim" path="card-4-hearts"></game-icon>
             <game-icon author="aussiesim" path="card-4-spades"></game-icon>
-
             <game-icon author="aussiesim" path="card-5-clubs"></game-icon>
             <game-icon author="aussiesim" path="card-5-diamonds"></game-icon>
             <game-icon author="aussiesim" path="card-5-hearts"></game-icon>
             <game-icon author="aussiesim" path="card-5-spades"></game-icon>
-
             <game-icon author="aussiesim" path="card-6-clubs"></game-icon>
             <game-icon author="aussiesim" path="card-6-diamonds"></game-icon>
             <game-icon author="aussiesim" path="card-6-hearts"></game-icon>
             <game-icon author="aussiesim" path="card-6-spades"></game-icon>
-
             <game-icon author="aussiesim" path="card-7-clubs"></game-icon>
             <game-icon author="aussiesim" path="card-7-diamonds"></game-icon>
             <game-icon author="aussiesim" path="card-7-hearts"></game-icon>
             <game-icon author="aussiesim" path="card-7-spades"></game-icon>
-
             <game-icon author="aussiesim" path="card-8-clubs"></game-icon>
             <game-icon author="aussiesim" path="card-8-diamonds"></game-icon>
             <game-icon author="aussiesim" path="card-8-hearts"></game-icon>
             <game-icon author="aussiesim" path="card-8-spades"></game-icon>
-
             <game-icon author="aussiesim" path="card-9-clubs"></game-icon>
             <game-icon author="aussiesim" path="card-9-diamonds"></game-icon>
             <game-icon author="aussiesim" path="card-9-hearts"></game-icon>
             <game-icon author="aussiesim" path="card-9-spades"></game-icon>
-
             <game-icon author="aussiesim" path="card-10-clubs"></game-icon>
             <game-icon author="aussiesim" path="card-10-diamonds"></game-icon>
             <game-icon author="aussiesim" path="card-10-hearts"></game-icon>
             <game-icon author="aussiesim" path="card-10-spades"></game-icon>
-
             <game-icon author="aussiesim" path="card-jack-clubs"></game-icon>
             <game-icon author="aussiesim" path="card-jack-diamonds"></game-icon>
             <game-icon author="aussiesim" path="card-jack-hearts"></game-icon>
             <game-icon author="aussiesim" path="card-jack-spades"></game-icon>
-
             <game-icon author="aussiesim" path="card-king-clubs"></game-icon>
             <game-icon author="aussiesim" path="card-king-diamonds"></game-icon>
             <game-icon author="aussiesim" path="card-king-hearts"></game-icon>
             <game-icon author="aussiesim" path="card-king-spades"></game-icon>
-
             <game-icon author="aussiesim" path="card-queen-clubs"></game-icon>
             <game-icon author="aussiesim" path="card-queen-diamonds"></game-icon>
             <game-icon author="aussiesim" path="card-queen-hearts"></game-icon>
@@ -111,9 +99,75 @@
             <game-icon author="carl-olsen" path="mite-alt"></game-icon>
             <game-icon author="carl-olsen" path="spider-alt"></game-icon>
             <game-icon author="carl-olsen" path="spider-face"></game-icon>
+
+            <game-icon author="cathelineau" path="annexation"></game-icon>
+            <game-icon author="cathelineau" path="bad-gnome"></game-icon>
+            <game-icon author="cathelineau" path="battleship"></game-icon>
+            <game-icon author="cathelineau" path="boar-ensign"></game-icon>
+            <game-icon author="cathelineau" path="carnyx"></game-icon>
+            <game-icon author="cathelineau" path="carrier"></game-icon>
+            <game-icon author="cathelineau" path="chariot"></game-icon>
+            <game-icon author="cathelineau" path="cruiser"></game-icon>
+            <game-icon author="cathelineau" path="dread"></game-icon>
+            <game-icon author="cathelineau" path="dreadnought"></game-icon>
+            <game-icon author="cathelineau" path="earth-worm"></game-icon>
+            <game-icon author="cathelineau" path="flying-trout"></game-icon>
+            <game-icon author="cathelineau" path="fomorian"></game-icon>
+            <game-icon author="cathelineau" path="great-war-tank"></game-icon>
+            <game-icon author="cathelineau" path="holy-oak"></game-icon>
+            <game-icon author="cathelineau" path="iron-hulled-warship"></game-icon>
+            <game-icon author="cathelineau" path="medusa-head"></game-icon>
+            <game-icon author="cathelineau" path="occupy"></game-icon>
+            <game-icon author="cathelineau" path="old-king"></game-icon>
+            <game-icon author="cathelineau" path="oppidum"></game-icon>
+            <game-icon author="cathelineau" path="polar-bear"></game-icon>
+            <game-icon author="cathelineau" path="swordman"></game-icon>
+            <game-icon author="cathelineau" path="transparent-slime"></game-icon>
+            <game-icon author="cathelineau" path="tree-face"></game-icon>
+            <game-icon author="cathelineau" path="tumulus"></game-icon>
+            <game-icon author="cathelineau" path="witch-face"></game-icon>
+
+            <game-icon author="darkzaitzev" path="acrobatic"></game-icon>
+            <game-icon author="darkzaitzev" path="apothecary"></game-icon>
+            <game-icon author="darkzaitzev" path="big-gear"></game-icon>
+            <game-icon author="darkzaitzev" path="catch"></game-icon>
+            <game-icon author="darkzaitzev" path="cauldron"></game-icon>
+            <game-icon author="darkzaitzev" path="chameleon-glyph"></game-icon>
+            <game-icon author="darkzaitzev" path="death-juice"></game-icon>
+            <game-icon author="darkzaitzev" path="distraction"></game-icon>
+            <game-icon author="darkzaitzev" path="fish-cooked"></game-icon>
+            <game-icon author="darkzaitzev" path="flying-shuriken"></game-icon>
+            <game-icon author="darkzaitzev" path="fried-fish"></game-icon>
+            <game-icon author="darkzaitzev" path="hooded-assassin"></game-icon>
+            <game-icon author="darkzaitzev" path="hooded-figure"></game-icon>
+            <game-icon author="darkzaitzev" path="kusarigama"></game-icon>
+            <game-icon author="darkzaitzev" path="ninja-head"></game-icon>
+            <game-icon author="darkzaitzev" path="ninja-heroic-stance"></game-icon>
+            <game-icon author="darkzaitzev" path="north-star-shuriken"></game-icon>
+            <game-icon author="darkzaitzev" path="on-sight"></game-icon>
+            <game-icon author="darkzaitzev" path="plants-and-animals"></game-icon>
+            <game-icon author="darkzaitzev" path="ram"></game-icon>
+            <game-icon author="darkzaitzev" path="revolt"></game-icon>
+            <game-icon author="darkzaitzev" path="robber-hand"></game-icon>
+            <game-icon author="darkzaitzev" path="running-ninja"></game-icon>
+            <game-icon author="darkzaitzev" path="severed-hand"></game-icon>
+            <game-icon author="darkzaitzev" path="sharp-shuriken"></game-icon>
+            <game-icon author="darkzaitzev" path="shuriken"></game-icon>
+            <game-icon author="darkzaitzev" path="skull-sabertooth"></game-icon>
+            <game-icon author="darkzaitzev" path="smoke-bomb"></game-icon>
+            <game-icon author="darkzaitzev" path="star-shuriken"></game-icon>
+            <game-icon author="darkzaitzev" path="tabi-boot"></game-icon>
+            <game-icon author="darkzaitzev" path="three-pointed-shuriken"></game-icon>
+            <game-icon author="darkzaitzev" path="whirlpool-shuriken"></game-icon>
+            
           </div>
         </template>
       </demo-snippet>
     </div>
   </body>
 </html>
+
+
+
+
+
