more demo of icons

--- a/demo/index.html
+++ b/demo/index.html
@@ -159,6 +159,87 @@
             <game-icon author="darkzaitzev" path="tabi-boot"></game-icon>
             <game-icon author="darkzaitzev" path="three-pointed-shuriken"></game-icon>
             <game-icon author="darkzaitzev" path="whirlpool-shuriken"></game-icon>
+
+            <game-icon author="delapouite" path="3d-meeple"></game-icon>
+            <game-icon author="delapouite" path="3d-stairs"></game-icon>
+            <game-icon author="delapouite" path="abacus"></game-icon>
+            <game-icon author="delapouite" path="achilles-heel"></game-icon>
+            <game-icon author="delapouite" path="acoustic-megaphone"></game-icon>
+            <game-icon author="delapouite" path="africa"></game-icon>
+            <game-icon author="delapouite" path="ages"></game-icon>
+            <game-icon author="delapouite" path="air-balloon"></game-icon>
+            <game-icon author="delapouite" path="airtight-hatch"></game-icon>
+            <game-icon author="delapouite" path="alarm-clock"></game-icon>
+            <game-icon author="delapouite" path="algae"></game-icon>
+            <game-icon author="delapouite" path="alien-bug"></game-icon>
+            <game-icon author="delapouite" path="alien-egg"></game-icon>
+            <game-icon author="delapouite" path="all-seeing-eye"></game-icon>
+            <game-icon author="delapouite" path="amber-mosquito"></game-icon>
+            <game-icon author="delapouite" path="ambulance"></game-icon>
+            <game-icon author="delapouite" path="american-football-helmet"></game-icon>
+            <game-icon author="delapouite" path="american-shield"></game-icon>
+            <game-icon author="delapouite" path="amphora"></game-icon>
+            <game-icon author="delapouite" path="anarchy"></game-icon>
+            <game-icon author="delapouite" path="ancient-ruins"></game-icon>
+            <game-icon author="delapouite" path="angry-eyes"></game-icon>
+            <game-icon author="delapouite" path="animal-hide"></game-icon>
+            <game-icon author="delapouite" path="antarctica"></game-icon>
+            <game-icon author="delapouite" path="antibody"></game-icon>
+            <game-icon author="delapouite" path="anubis"></game-icon>
+            <game-icon author="delapouite" path="aquarium"></game-icon>
+            <game-icon author="delapouite" path="aqueduct"></game-icon>
+            <game-icon author="delapouite" path="arabic-door"></game-icon>
+            <game-icon author="delapouite" path="arc-triomphe"></game-icon>
+            <game-icon author="delapouite" path="arm"></game-icon>
+            <game-icon author="delapouite" path="armadillo"></game-icon>
+            <game-icon author="delapouite" path="arrest"></game-icon>
+            <game-icon author="delapouite" path="asian-lantern"></game-icon>
+            <game-icon author="delapouite" path="asteroid"></game-icon>
+            <game-icon author="delapouite" path="astronaut-helmet"></game-icon>
+            <game-icon author="delapouite" path="atlas"></game-icon>
+            <game-icon author="delapouite" path="attached-shield"></game-icon>
+            <game-icon author="delapouite" path="audio-cassette"></game-icon>
+            <game-icon author="delapouite" path="australia"></game-icon>
+            <game-icon author="delapouite" path="baby-face"></game-icon>
+            <game-icon author="delapouite" path="babyfoot-players"></game-icon>
+            <game-icon author="delapouite" path="backgammon"></game-icon>
+            <game-icon author="delapouite" path="backpack"></game-icon>
+            <game-icon author="delapouite" path="backward-time"></game-icon>
+            <game-icon author="delapouite" path="bad-breath"></game-icon>
+            <game-icon author="delapouite" path="banana-peel"></game-icon>
+            <game-icon author="delapouite" path="banana"></game-icon>
+            <game-icon author="delapouite" path="bank"></game-icon>
+            <game-icon author="delapouite" path="banknote"></game-icon>
+            <game-icon author="delapouite" path="barbarian"></game-icon>
+            <game-icon author="delapouite" path="barn"></game-icon>
+            <game-icon author="delapouite" path="barracks-tent"></game-icon>
+            <game-icon author="delapouite" path="barracks"></game-icon>
+            <game-icon author="delapouite" path="barrel"></game-icon>
+            <game-icon author="delapouite" path="barricade"></game-icon>
+            <game-icon author="delapouite" path="bat"></game-icon>
+            <game-icon author="delapouite" path="battle-mech"></game-icon>
+            <game-icon author="delapouite" path="beach-ball"></game-icon>
+            <game-icon author="delapouite" path="beam-satellite"></game-icon>
+            <game-icon author="delapouite" path="bear-head"></game-icon>
+            <game-icon author="delapouite" path="bed-lamp"></game-icon>
+            <game-icon author="delapouite" path="bed"></game-icon>
+            <game-icon author="delapouite" path="beehive"></game-icon>
+            <game-icon author="delapouite" path="beer-bottle"></game-icon>
+            <game-icon author="delapouite" path="beet"></game-icon>
+            <game-icon author="delapouite" path="belgium"></game-icon>
+            <game-icon author="delapouite" path="belt-armor"></game-icon>
+            <game-icon author="delapouite" path="biceps"></game-icon>
+            <game-icon author="delapouite" path="bindle"></game-icon>
+            <game-icon author="delapouite" path="binoculars"></game-icon>
+            <game-icon author="delapouite" path="black-belt"></game-icon>
+            <game-icon author="delapouite" path="black-knight-helm"></game-icon>
+            <game-icon author="delapouite" path="blacksmith"></game-icon>
+            <game-icon author="delapouite" path="blindfold"></game-icon>
+            <game-icon author="delapouite" path="block-house"></game-icon>
+            <game-icon author="delapouite" path="bo"></game-icon>
+            <game-icon author="delapouite" path="boat-propeller"></game-icon>
+            <game-icon author="delapouite" path="body-balance"></game-icon>
+            <game-icon author="delapouite" path="body-height"></game-icon>
             
           </div>
         </template>
