mode icons are demoed

--- a/demo/index.html
+++ b/demo/index.html
@@ -240,6 +240,33 @@
             <game-icon author="delapouite" path="boat-propeller"></game-icon>
             <game-icon author="delapouite" path="body-balance"></game-icon>
             <game-icon author="delapouite" path="body-height"></game-icon>
+            <game-icon author="delapouite" path="bolivia"></game-icon>
+            <game-icon author="delapouite" path="bolt-cutter"></game-icon>
+            <game-icon author="delapouite" path="bolt-spell-cast"></game-icon>
+            <game-icon author="delapouite" path="bonsai-tree"></game-icon>
+            <game-icon author="delapouite" path="book-cover"></game-icon>
+            <game-icon author="delapouite" path="book-pile"></game-icon>
+            <game-icon author="delapouite" path="bookshelf"></game-icon>
+            <game-icon author="delapouite" path="boomerang"></game-icon>
+            <game-icon author="delapouite" path="boss-key"></game-icon>
+            <game-icon author="delapouite" path="bottle-cap"></game-icon>
+            <game-icon author="delapouite" path="boulder-dash"></game-icon>
+            <game-icon author="delapouite" path="bow-arrow"></game-icon>
+            <game-icon author="delapouite" path="bow-tie-ribbon"></game-icon>
+            <game-icon author="delapouite" path="bow-tie"></game-icon>
+            <game-icon author="delapouite" path="bowels"></game-icon>
+            <game-icon author="delapouite" path="bowen-knot"></game-icon>
+            <game-icon author="delapouite" path="bowling-strike"></game-icon>
+            <game-icon author="delapouite" path="box-cutter"></game-icon>
+            <game-icon author="delapouite" path="bracer"></game-icon>
+            <game-icon author="delapouite" path="brass-knuckles"></game-icon>
+            <game-icon author="delapouite" path="brazil-flag"></game-icon>
+            <game-icon author="delapouite" path="bread"></game-icon>
+            <game-icon author="delapouite" path="brick-pile"></game-icon>
+            <game-icon author="delapouite" path="brick-wall"></game-icon>
+            <game-icon author="delapouite" path="briefcase"></game-icon>
+            <game-icon author="delapouite" path="broken-pottery"></game-icon>
+            <game-icon author="delapouite" path="broken-wall"></game-icon>
             
           </div>
         </template>
