redirect to demo page using a path relative to root instead of the current page and setting the types of element properties in a shorter format when no default is needed.

--- a/game-icon.html
+++ b/game-icon.html
@@ -81,12 +81,8 @@
             type: Boolean,
             value: false,
           },
-          author: {
-            type: String,
-          },
-          path: {
-            type: String,
-          },
+          author: String,
+          path: String,
           width: {
             type: Number,
             value: 50,
